# BrickGame

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.cmake  compile_commands.json  qresources.qrc  tags
doxygen/html/: abstractGame_8hpp_source.html  annotated.html  brick_8hpp_source.html  brick__game_8hpp_source.html  classabstract.html  classbrick__game_1_1abstractGame-members.html  classbrick__game_1_1abstractGame.html  classbrick__game_1_1abstractGame__coll__graph.map  classbrick__game_1_1abstractGame__coll__graph.md5  classbrick__game_1_1abstractGame__inherit__graph.map  classbrick__game_1_1abstractGame__inherit__graph.md5  classbrick__game_1_1brick-members.html  classbrick__game_1_1brick.html  classbrick__game_1_1brick__coll__graph.map  classbrick__game_1_1brick__coll__graph.md5  classbrick__game_1_1directionEvent-members.html  classbrick__game_1_1directionEvent.html  classbrick__game_1_1directionEvent__coll__graph.md5  classbrick__game_1_1directionEvent__inherit__graph.map  classbrick__game_1_1endDialog-members.html  classbrick__game_1_1endDialog.html  classbrick__game_1_1endDialog__coll__graph.md5  classbrick__game_1_1endDialog__inherit__graph.map  classbrick__game_1_1field-members.html  classbrick__game_1_1field.html  classbrick__game_1_1general__window-members.html  classbrick__game_1_1general__window.html  classbrick__game_1_1general__window__coll__graph.md5  classbrick__game_1_1general__window__inherit__graph.map  classbrick__game_1_1pauseEvent-members.html  classbrick__game_1_1pauseEvent.html  classbrick__game_1_1pauseEvent__coll__graph.map  classbrick__game_1_1pauseEvent__inherit__graph.md5  classbrick__game_1_1pauseLog-members.html  classbrick__game_1_1pauseLog.html  classbrick__game_1_1pauseLog__coll__graph.map  classbrick__game_1_1pauseLog__coll__graph.md5  classbrick__game_1_1pix-members.html  classbrick__game_1_1pix.html  classbrick__game_1_1pix__coll__graph.map  (+98 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  (+3 more)
include/: .clang_complete  brick_game.hpp  general_window.hpp
include/abstractGame/: .clang_complete  abstractGame.hpp  point.hpp  simplExempl.hpp
include/events/: directionEvent.hpp  pauseEvent.hpp
include/game_basis/: .clang_complete  brick_game.hpp
include/game_basis/abstractGame/: abstractGame.hpp  field.hpp  simplExempl.hpp  value.hpp
include/game_basis/events/: directionEvent.hpp
include/game_basis/logs/: endDialog.hpp  pauseLog.hpp
include/game_basis/player/: player.hpp
include/game_basis/screen/: pix.hpp  screen.hpp
include/general/: general_window.hpp  messageToFile.hpp
include/logs/: pauseLog.hpp
include/player/: player.hpp
include/recordTable/: recordTable.hpp
include/screen/: endDialog.hpp  pauseLog.hpp  pix.hpp  record_table.hpp  screen.hpp
include/snake/: .clang_complete  snake.hpp
include/tetramino/: tetramino.hpp
qresources/styles/: default_style.qss
sources/: .clang_complete  general_window.cpp  main.cpp
sources/abstractGame/: .clang_complete  abstractGame.cpp  simplExempl.cpp
sources/events/: directionEvent.cpp
sources/game_basis/: .clang_complete
sources/game_basis/abstractGame/: abstractGame.cpp  field.cpp  point.cpp  simplExempl.cpp
sources/game_basis/events/: pauseEvent.cpp
sources/game_basis/player/: player.cpp
sources/game_basis/screen/: pix.cpp  screen.cpp
sources/general/: .clang_complete  general_window.cpp  messageToFile.cpp
sources/logs/: endDialog.cpp  pauseLog.cpp
sources/recordTable/: recordTable.cpp
sources/screen/: endDialog.cpp  pauseLog.cpp  pix.cpp  record_table.cpp  screen.cpp
sources/snake/: .clang_complete  snake.cpp
sources/tetramino/: .clang_complete  brick.cpp  tetramino.cpp
src/: .clang_complete
src/game_basis/: CMakeLists.txt
src/game_basis/include/: brick_game.hpp
src/game_basis/include/abstractGame/: abstractGame.hpp  field.hpp  level.hpp  point.hpp  score.hpp  value.hpp
src/game_basis/include/events/: directionEvent.hpp  pauseEvent.hpp
src/game_basis/include/logs/: endDialog.hpp  pauseLog.hpp
src/game_basis/include/recordTable/: recordTable.hpp
src/game_basis/include/screen/: game_fon.hpp  screen.hpp
src/game_basis/sources/abstractGame/: abstractGame.cpp  field.cpp  level.cpp  point.cpp  score.cpp  value.cpp
src/game_basis/sources/logs/: endDialog.cpp  pauseLog.cpp
src/game_basis/sources/player/: player.cpp
src/game_basis/sources/recordTable/: recordTable.cpp
src/game_basis/sources/screen/: game_fon.cpp  pix.cpp  screen.cpp
src/game_basis/tests/: boost_test_abstractGame.cpp  boost_test_game_basis.cpp  boost_test_recordTable.cpp  test_slot.hpp
src/general/: CMakeLists.txt  config.h.in
src/general/include/: config.h  general_window.hpp  messageToFile.hpp
src/general/sources/: general_window.cpp  messageToFile.cpp
src/main/: CMakeLists.txt  config.h  config.h.in  main.cpp
src/qresources/: CMakeLists.txt  qresources.qrc
src/qresources/styles/: default_style.qss
src/simplExempl/: CMakeLists.txt
src/simplExempl/include/: simplExempl.hpp
src/simplExempl/sources/: simplExempl.cpp
src/simplExempl/tests/: boost_test_simplExempl.cpp
src/snake/: CMakeLists.txt
src/snake/include/: snake.hpp
src/snake/sources/: snake.cpp
src/tetramino/: CMakeLists.txt
src/tetramino/include/: brick.hpp  tetramino.hpp
src/tetramino/sources/: brick.cpp  tetramino.cpp
src/tetramino/tests/: boost_test_tetramino.cpp  test_slot.hpp
styles/: default_style.qss
tests/: test_for_game_basis.cpp
